# CodeScout

./: README.md  main.py  pyproject.toml
src/config/: prompts.py  schemas.py  settings.py
src/utils/: firecrawl.py  llm.py  workflow.py
