[project]
name = "codescout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "firecrawl-py>=4.5.0",
    "langchain>=1.0.1",
    "langchain-groq>=1.0.0",
    "langgraph>=1.0.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
]
